# subs

./: .gitignore  Cargo.toml  Config.ron.example  LICENSE-MIT  README.md
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  subs.rs  users.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: config.rs  error.rs  log.rs  main.rs  setup.rs  state.rs
src/handlers/: file.rs  mod.rs  sub.rs  user.rs
templates/error/: status.html.tera
