[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
sea-orm = { version = "0.7.1", features = ["sqlx-all", "runtime-actix-rustls", "debug-print"] }
serde = "1.0.136"
